--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@leenguyen/react-flip-clock-countdown": "^1.3.1",
     "@tanstack/react-query": "^4.13.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -17,9 +18,12 @@
     "flowbite-react": "^0.3.2",
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
+    "react-clock": "^4.0.0",
     "react-dom": "^18.2.0",
+    "react-live-clock": "^6.0.7",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "socket.io-client": "^4.5.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
