--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/daygrid": "^5.11.3",
+    "@fullcalendar/react": "^5.11.2",
     "@leenguyen/react-flip-clock-countdown": "^1.3.1",
     "@tanstack/react-query": "^4.13.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -20,6 +22,7 @@
     "react": "^18.2.0",
     "react-clock": "^4.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-live-clock": "^6.0.7",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
