--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "axios": "^1.1.3",
+    "clsx": "^1.2.1",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.3.2",
     "js-cookie": "^3.0.1",
